  with ``cls``

  Closes #4657

* Fix ignored empty functions by similarities checker with "ignore-signatures" option enabled

  Closes #4652

* Fix false-positive of ``use-maxsplit-arg`` when index is incremented in
  a loop

  Closes #4664

* Clarify documentation for consider-using-from-import

* Don't emit ``unreachable`` warning for empty generator functions

  Closes #4698

* Fix ``invalid-overridden-method`` with nested property

  Closes #4368

* Fix false-positive of ``unused-private-member`` when using ``__new__`` in a class

  Closes #4668


What's New in Pylint 2.9.3?
===========================
Release date: 2021-07-01


* Fix a crash that happened when analysing empty function with docstring
  in the ``similarity`` checker.

  Closes #4648

* The ``similarity`` checker no longer add three trailing whitespaces for
  empty lines in its report.


What's New in Pylint 2.9.2?
===========================
Release date: 2021-07-01

* Fix a crash that happened when analysing code using ``type(self)`` to access
  a class attribute in the ``unused-private-member`` checker.

  Closes #4638

* Fix a false positive for ``unused-private-member`` when accessing a private variable
  with ``self``

  Closes #4644

* Fix false-positive of ``unnecessary-dict-index-lookup`` and ``consider-using-dict-items``
  for reassigned dict index lookups

  Closes #4630


What's New in Pylint 2.9.1?
===========================
Release date: 2021-06-30

* Upgrade astroid to 2.6.2

  Closes #4631
  Closes #4633


What's New in Pylint 2.9.0?
===========================
Release date: 2021-06-29

* Python 3.10 is now supported.

* Add type annotations to pyreverse dot files

  Closes #1548

* Fix missing support for detecting deprecated aliases to existing
  functions/methods.

  Closes #4618

* astroid has been upgraded to 2.6.1

* Added various deprecated functions/methods for python 3.10, 3.7, 3.6 and 3.3
